start making nav popup for mobile

--- a/src/index.css
+++ b/src/index.css
@@ -18,4 +18,5 @@
 @import url(./components/AboutMe/AboutMe.css);
 @import url(./components/Portfolio/Portfolio.css);
 @import url(./components/Footer/Footer.css);
-
+@import url(./components/NavPopup/NavPopup.css);
+@import url(./components/Navigation/Navigation.css);
