--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,5 @@
 @import url(./components/Footer/Footer.css);
 @import url(./components/NavPopup/NavPopup.css);
 @import url(./components/Navigation/Navigation.css);
+@import url(./components/Login/Login.css);
+
