--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,10 +1,8 @@
 .login {
-  max-width: 320px;
+  /* max-width: 320px; */
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: fixed;
-  inset: 0;
 
 }
 
@@ -14,15 +12,99 @@
 }
 
 .login__title {
+  margin: 0;
   margin-bottom: 80px;
+  font-size: 24px;
+  font-weight: 500;
 
 }
 
-.login__form {
-  padding: 0 30px;
+.user-form {
+  box-sizing: border-box;
+  width: 100%;
+  padding: 0 30px 30px;
 }
 
-.login__form-label {
+.user-form__row {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 8px;
+
+}
+
+.user-form__row:last-of-type {
+  margin-bottom: 222px;
+}
+
+.user-form__label {
   color: #A0A0A0;
   font-size: 10px;
+  margin-bottom: 5px;
+}
+
+.user-form__input {
+  width: 100%;
+  padding: 0;
+  padding-bottom: 10px;
+  margin-bottom: 4px;
+  color: #000;
+  font-size: 14px;
+  font-weight: 500;
+  border: none;
+  border-bottom: 1px solid #E8E8E8;
+  outline: none;
+}
+
+.user-form__input:focus {
+  border: none;
+  outline: none;
+  border-bottom: 1px solid #3456F3;
+}
+
+.user-form__input:invalid {
+  border: none;
+  outline: none;
+  border-bottom: 1px solid #EE3465;
+}
+
+.user-form__error-message {
+  margin: 0;
+  color: #EE3465;
+  font-size: 10px;
+  font-weight: 400;
+}
+
+.user-form__error-message_place_input {}
+
+.user-form__error-message_place_submit {
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.user-form__submit-button {
+  width: 100%;
+  min-height: 45px;
+  padding: 0;
+  background-color: #3456F3;
+  border: none;
+  border-radius: 3px;
+  color: #fff;
+  text-align: center;
+  font-size: 12px;
+  font-weight: 500;
+
+}
+
+.user-form__button-subtitle {
+  color: #A0A0A0;
+  text-align: center;
+  font-size: 12px;
+}
+
+.user-form__button-subtitle-link {
+  display: inline;
+  color: #3456F3;
+  text-align: center;
+  font-size: 12px;
+  text-decoration: none;
 }
