--- a/src/components/NavPopup/NavPopup.css
+++ b/src/components/NavPopup/NavPopup.css
@@ -2,6 +2,7 @@
   position: fixed;
   inset: 0;
   max-width: 320px;
+
 }
 
 .nav-popup__overlay {
@@ -12,7 +13,7 @@
 }
 
 .nav-popup__wrapper {
-  background-color: #fff;
+  background-color: #FAFAFA;
   position: absolute;
   inset: 0;
 }
