--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  border-bottom: 1px solid #E8E8E8;
+  margin-bottom: 10px;
 }
 
 .search-form__input-wrapper {
@@ -10,6 +12,7 @@
   align-items: center;
   min-height: 72px;
   padding: 0 19px;
+  margin-bottom: 46px;
   border-radius: 9px;
   background: #FFF;
   box-shadow: 0px 3px 14px 0px rgba(0, 0, 0, 0.08);
@@ -20,6 +23,13 @@
   padding: 0;
   border: none;
   outline: none;
+}
+
+.search-form__input::placeholder {
+  color: #A0A0A0;
+font-size: 14px;
+font-weight: 400;
+line-height: 1.42;
 }
 
 .search-form__input:focus {
@@ -38,15 +48,28 @@
 }
 
 .search-form__checkbox-wrapper {
-
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 45px;
 }
 
 .search-form__checkbox {
+  width: 36px;
+  height: 20px;
+  margin-right: 13px;
+  flex-shrink: 0;
+  background-image: url(../../images/checkbox-unchecked.svg);
+}
 
+.search-form__checkbox_checked {
+  background-image: url(../../images/checkbox-checked.svg);
 }
 
 .search-form__checkbox-label {
-
+  font-size: 11px;
+  font-weight: 400;
+  line-height: 1.63
 }
 
 
