--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -1,17 +1,20 @@
 .movie-card {
   display: flex;
   flex-direction: column;
+  width: 300px;
+  min-height: 235px;
   filter: drop-shadow(0px 16px 24px rgba(0, 0, 0, 0.05));
   background-color: #fff;
   border-radius: 10px;
+
 }
 
 .movie-card__image {
-  border-radius: 10px 10px 0 0;
   display: block;
-  max-width: 300px;
-  max-height: 168px;
-  margin-bottom: 14px;
+  height: 168px;
+  margin-bottom: 9px;
+  border-radius: 10px 10px 0 0;
+  object-fit: cover;
 }
 
 .movie-card__wrapper {
@@ -19,7 +22,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 10px;
+  margin-bottom: 4px;
   padding: 0 12px;
 }
 
@@ -42,7 +45,16 @@
   background-image: url(../../images/save-button-active.svg);
 }
 
-.movie-card__delete-button {}
+.movie-card__delete-button {
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  background-image: url(../../images/delete-button.svg);
+  width: 28px;
+  height: 28px;
+  background-repeat: no-repeat;
+  background-position: 12px center;
+}
 
 .movie-card__duration {
   margin: 0;
