--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,4 @@
 @import url(./components/SavedMovies/SavedMovies.css);
 @import url(./components/MoviesCardlist/MoviesCardlist.css);
 @import url(./components/MoviesCard/MoviesCard.css);
+@import url(./components/NotFound/NotFound.css);
