--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,6 @@
 .page {
   position: relative;
   font-family: Inter, Arial, sans-serif;
-  width: 320px;
+  /* width: 768px; */
+  /* width: 320px; */
 }
