--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -1,33 +1,76 @@
 .about-project {
-  padding: 70px 18px 0;
-  margin-bottom: 70px;
+  padding: 70px 18px;
 }
 
+@media(min-width: 768px) {
+  .about-project {
+    padding: 90px 50px;
+    }
+}
+
+
 .about-project__title {
-  margin: 0;
-  margin-bottom: 63px;
-  padding-bottom: 28px;
+  margin: 0 0 63px 0;
+  padding: 0 0 28px 0;
   border-bottom: 1px solid #000;
   font-size: 18px;
   font-weight: 400;
   letter-spacing: -0.72px;
 }
 
-.about-project__article {
+@media(min-width: 768px) {
+  .about-project__title {
+    margin: 0 0 70px 0;
+    padding: 0 0 23px 0;
+    font-size: 22px;
+    letter-spacing: -0.88px;
+    }
+}
+
+.about-project__wrapper {
   display: flex;
   flex-direction: column;
-  margin-bottom: 60px;
+  margin: 0 0 60px 0;
+  row-gap: 60px;
+}
+
+@media(min-width: 768px) {
+  .about-project__wrapper {
+    flex-direction: row;
+    justify-content: space-between;
+    column-gap: 36px;
+    margin: 0 0 93px 0;
+    }
+}
+
+
+.about-project__article {
+
+}
+
+@media(min-width: 768px) {
+  .about-project__article {
+    margin: 0 0 0 0;
+    }
 }
 
 .about-project__article:last-child {}
 
 .about-project__article-title {
-  margin: 0;
-  margin-bottom: 16px;
+  margin: 0 0 16px 0;
   font-size: 18px;
   font-weight: 400;
   letter-spacing: -0.72px;
 }
+
+@media(min-width: 768px) {
+  .about-project__article-title {
+    margin: 0 0 26px 0;
+    font-size: 20px;
+    letter-spacing: -0.8px;
+    }
+}
+
 
 .about-project__article-text {
   margin: 0;
@@ -35,17 +78,39 @@
   line-height: 1.45
 }
 
+@media(min-width: 768px) {
+  .about-project__article-text {
+    font-size: 12px;
+    line-height: 1.5
+    }
+}
+
 .about-project__scheme {
   display: grid;
-  grid-template-columns: 35.21% 1fr;
+  align-items: center;
+  grid-template-columns: 32.21% 1fr;
+}
+
+@media(min-width: 768px) {
+  .about-project__scheme {
+    grid-template-columns: 20.95% 1fr;
+    row-gap: 5px;
+    }
 }
 
 .about-project__scheme-item {
-  padding: 11px 0;
   margin: 0;
+  padding: 11px 0;
   font-size: 11px;
   font-weight: 400;
   text-align: center;
+}
+
+@media(min-width: 768px) {
+  .about-project__scheme-item {
+    font-size: 14px;
+    padding: 10px 0;
+    }
 }
 
 .about-project__scheme-item_type_week {
