--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,16 +1,28 @@
 .footer {
-  padding: 80px 10px 0;
-  margin-bottom: 20px;
+  padding: 80px 10px 20px;
+  background-color: #FAFAFA;
+}
+
+@media (min-width: 768px) {
+  .footer{
+    padding: 59px 30px 20px;
+  }
 }
 
 .footer__project-info {
-  margin: 0;
-  margin-bottom: 30px;
-  padding-bottom: 21px;
+  margin: 0 0 30px 0;
+  padding: 0 0 21px 0;
   border-bottom: 1px solid #E8E8E8;
   color: #A0A0A0;
   text-align: center;
   font-size: 12px;
+}
+
+@media (min-width: 768px) {
+  .footer__project-info{
+    margin: 0 0 20px 0;
+    font-size: 13px;
+  }
 }
 
 .footer__wrapper {
@@ -19,27 +31,58 @@
   align-items: center;
 }
 
+@media (min-width: 768px) {
+  .footer__wrapper {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+
 .footer__links-list {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0;
-  margin-bottom: 30px;
+  margin: 0 0 30px 0;
   padding: 0;
   list-style: none;
 }
 
+@media (min-width: 768px) {
+  .footer__links-list {
+    margin: 0;
+    flex-direction: row;
+    justify-content: space-between;
+    order: 2;
+  }
+}
+
 .footer__link {
   display: block;
-  margin-bottom: 12px;
+  margin: 0 0 12px 0;
   color: #000;
   font-size: 13px;
   text-decoration: none;
   letter-spacing: -0.72px;
+  font-feature-settings: 'clig' off, 'liga' off;
+}
+
+@media (min-width: 768px) {
+  .footer__link {
+    font-size: 13px;
+    margin: 0 20px 0 0;
+    letter-spacing: initial;
+  }
 }
 
 .footer__links-list > li:last-child > a {
-  margin-bottom: 0;
+  margin: 0;
+}
+
+@media (min-width: 768px) {
+  .footer__links-list > li:last-child > a {
+
+  }
 }
 
 
@@ -47,4 +90,13 @@
   margin: 0;
   color: #A0A0A0;
   font-size: 12px;
+  font-feature-settings: 'clig' off, 'liga' off;
 }
+
+@media (min-width: 768px) {
+  .footer__copyright {
+    font-size: 13px;
+  }
+}
+
+
