--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,6 +7,12 @@
   margin: 0;
 }
 
+@media (min-width: 768px) {
+  .header {
+    padding: 0 30px;
+  }
+}
+
 .header_main {
   background-color: #DDDEE3;
 }
@@ -15,6 +21,12 @@
   width: 38px;
   height: 38px;
   background-image: url(../../images/header__logo.svg);
+}
+
+@media (min-width: 768px) {
+  .logo {
+
+  }
 }
 
 .header__login {
@@ -33,8 +45,14 @@
   line-height: 1.6;
   color: #000;
   text-decoration: none;
+  cursor: pointer;
+}
 
-
+@media (min-width: 768px) {
+  .header__signup-link {
+    font-size: 12px;
+    margin-right: 30px;
+  }
 }
 
 .header__signin-link {
@@ -51,8 +69,15 @@
   color: #fff;
   background-color: #3456F3;
   text-decoration: none;
+  cursor: pointer;
+}
 
-
+@media (min-width: 768px) {
+  .header__signin-link {
+    width: 76px;
+    height: 32px;
+    font-size: 12px;
+  }
 }
 
 .header__nav-button {
@@ -62,4 +87,14 @@
   border: none;
   background-color: transparent;
   background-image: url(../../images/header__nav-button.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  cursor: pointer;
+}
+
+@media (min-width: 768px) {
+  .header__nav-button {
+    width: 44px;
+    height: 44px;
+  }
 }
