--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -1,4 +1,10 @@
 .movies {
-  padding: 80px 10px 0;
+  padding: 80px 10px;
   background-color: #FAFAFA;
+}
+
+@media (min-width: 768px) {
+  .movies {
+    padding: 80px 30px 100px;
+  }
 }
