--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -1,20 +1,32 @@
 .movie-card {
-  display: flex;
-  flex-direction: column;
   width: 300px;
-  min-height: 235px;
+  /* min-height: 235px; */
   filter: drop-shadow(0px 16px 24px rgba(0, 0, 0, 0.05));
   background-color: #fff;
   border-radius: 10px;
 
 }
 
+@media (min-width: 768px) {
+  .movie-card {
+    width: 339px;
+  }
+}
+
 .movie-card__image {
   display: block;
+  width: 300px;
   height: 168px;
-  margin-bottom: 9px;
+  margin: 0 0 9px 0;
   border-radius: 10px 10px 0 0;
   object-fit: cover;
+}
+
+@media (min-width: 768px) {
+  .movie-card__image {
+    width: 339px;
+    height: 190px;
+  }
 }
 
 .movie-card__wrapper {
@@ -22,14 +34,26 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 4px;
+  margin: 0 0 4px 0;
   padding: 0 12px;
 }
 
-.movie-card__name {
+@media (min-width: 768px) {
+  .movie-card__wrapper {
+    padding: 0 5px 0 12px;
+  }
+}
+
+.movie-card__title {
   margin: 0;
   font-size: 13px;
   font-weight: 500;
+}
+
+@media (min-width: 768px) {
+  .movie-card__title {
+
+  }
 }
 
 .movie-card__save-button {
@@ -39,6 +63,12 @@
   background-image: url(../../images/save-button-unactive.svg);
   width: 28px;
   height: 28px;
+}
+
+@media (min-width: 768px) {
+  .movie-card__save-button  {
+
+  }
 }
 
 .movie-card__save-button_active {
@@ -56,11 +86,23 @@
   background-position: 12px center;
 }
 
+@media (min-width: 768px) {
+  .movie-card__delete-button {
+
+  }
+}
+
 .movie-card__duration {
   margin: 0;
-  padding-left: 12px;
-  margin-bottom: 14px;
+  padding: 0 0 0 12px;
+  margin: 0 0 14px 0;
   color: #A0A0A0;
   font-size: 11px;
   font-weight: 400;
+}
+
+@media (min-width: 768px) {
+  .movie-card__duration{
+
+  }
 }
