--- a/src/components/MoviesCardlist/MoviesCardlist.css
+++ b/src/components/MoviesCardlist/MoviesCardlist.css
@@ -1,27 +1,46 @@
 .movies__cardlist {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 37px;
+  padding: 37px 0 0 0;
+}
+
+@media (min-width: 768px) {
+  .movies__cardlist {
+    padding: 70px 0 0 0;
+  }
 }
 
 .movies__cardlist-grid {
   display: grid;
   grid-template-columns: 1fr;
+  justify-items: center;
+  justify-content: center;
   gap: 20px;
-  margin-bottom: 80px;
+  margin: 0 0 80px 0;
+}
+
+@media (min-width: 768px) {
+  .movies__cardlist-grid {
+    grid-template-columns: repeat(auto-fill, 339px);
+    gap: 36px 30px;
+  }
 }
 
 .movies__cardlist-button {
-  width: 100%;
-  min-height: 36px;
-  max-width: 240px;
+  display: block;
+  width: 240px;
+  height: 36px;
+  margin: 0 auto;
   border: none;
   border-radius: 6px;
   padding: 0;
-  margin-bottom: 80px;
   background-color: #F4F4F4;
   text-align: center;
   font-size: 12px;
   font-weight: 500;
+  cursor: pointer;
+}
+
+@media (min-width: 768px) {
+  .movies__cardlist-button {
+    width: 320px;
+  }
 }
