--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -1,25 +1,48 @@
 .portfolio {
-  padding: 0 14px;
-  margin-bottom: 128px;
+  padding: 0 14px 70px;
 
 }
 
+@media (min-width: 768px) {
+  .portfolio{
+    padding: 0 50px 90px;
+
+  }
+}
+
 .portfolio__title {
-  margin: 0;
-  margin-bottom: 40px;
+  margin: 0 0 40px 0;
   color: #A0A0A0;
   font-size: 14px;
   font-weight: 400;
   line-height: 1.42;
 }
 
+@media (min-width: 768px) {
+  .portfolio__title{
+    margin: 0 0 50px 0;
+    font-size: 18px;
+    line-height: 1.11;
+  }
+}
+
 .portfolio__item {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-bottom: 19px;
-  margin-bottom: 20px;
+  padding: 0 0 19px 0;
+  margin: 0 0 20px 0;
   border-bottom: 1px solid #E6E6E6;;
+}
+
+.portfolio__item:last-child {
+  margin: 0;
+}
+
+@media (min-width: 768px) {
+  .portfolio__item{
+
+  }
 }
 
 .portfolio__link {
@@ -32,9 +55,23 @@
   letter-spacing: -0.72px;
 }
 
+@media (min-width: 768px) {
+  .portfolio__link{
+    font-size: 28px;
+    line-height: 1.78;
+    letter-spacing: -1.12px;
+  }
+}
+
 .portfolio__arrow {
   margin: 0;
   font-family: Inter;
   font-size: 18px;
   font-weight: 400;
+}
+
+@media (min-width: 768px) {
+  .portfolio__arrow{
+    font-size: 28px;
+  }
 }
