--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -6,12 +6,30 @@
   background-size: 248px 248px;
 }
 
+@media (min-width: 768px) {
+  .promo {
+    background-size: 320px 320px;
+    background-position: 50% 48%;
+    }
+}
+
+
 .promo__title {
 margin: 0;
-padding: 207px 14px 246px;
+padding: 207px 10px 246px;
 text-align: center;
 font-size: 31px;
 font-weight: 400;
 line-height: 1.25;
 letter-spacing: -1.24px;
 }
+
+@media (min-width: 768px) {
+  .promo__title {
+    padding: 326px 19px 342px;
+    font-size: 50px;
+    line-height: 1.16;
+    letter-spacing: -2px;
+    }
+}
+
