--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -3,8 +3,33 @@
   flex-direction: column;
   align-items: center;
   border-bottom: 1px solid #E8E8E8;
-  margin-bottom: 10px;
+  margin: 0 0 10px 0;
 }
+
+@media (min-width: 768px) {
+  .search-form {
+    display: block;
+  }
+}
+
+.search-form__icon {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .search-form__icon {
+    display: block;
+    width: 34px;
+    height: 34px;
+    margin: 0 10px 0 0;
+    background-image: url(../../images/search-icon.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    flex-shrink: 0;
+
+  }
+}
+
 
 .search-form__input-wrapper {
   display: flex;
@@ -12,24 +37,43 @@
   align-items: center;
   min-height: 72px;
   padding: 0 19px;
-  margin-bottom: 46px;
+  margin: 0 0 46px 0;
   border-radius: 9px;
   background: #FFF;
   box-shadow: 0px 3px 14px 0px rgba(0, 0, 0, 0.08);
 }
 
+@media (min-width: 768px) {
+  .search-form__input-wrapper {
+    margin: 0 0 109px 0;
+  }
+}
+
 .search-form__input {
   width: 100%;
   padding: 0;
+  font-size: 14px;
+  line-height: 1.42;
   border: none;
   outline: none;
 }
 
+@media (min-width: 768px) {
+  .search-form__input {
+    font-size: 18px;
+    line-height: 1.11
+  }
+}
+
 .search-form__input::placeholder {
   color: #A0A0A0;
-font-size: 14px;
-font-weight: 400;
-line-height: 1.42;
+
+}
+
+@media (min-width: 768px) {
+  .search-form__input::placeholder {
+
+  }
 }
 
 .search-form__input:focus {
@@ -41,25 +85,46 @@ line-height: 1.42;
   height: 34px;
   flex-shrink: 0;
   padding: 0;
-  margin-left: 46px;
+  margin: 0 0 0 46px;
   background-color: transparent;
   background-image: url(../../images/search-button.svg);
   border: none;
+}
+
+@media (min-width: 768px) {
+  .search-form__submit-button {
+    margin: 0 19px 0 0;
+  }
 }
 
 .search-form__checkbox-wrapper {
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-bottom: 45px;
+  margin: 0 0 45px 0;
+}
+
+@media (min-width: 768px) {
+  .search-form__checkbox-wrapper {
+    margin: 0;
+    padding: 0 0 0 19px;
+    border-left: 1px solid #CBCBCB;
+    min-height: 40px;
+  }
 }
 
 .search-form__checkbox {
   width: 36px;
   height: 20px;
-  margin-right: 13px;
+  margin: 0 13px 0 0;
   flex-shrink: 0;
   background-image: url(../../images/checkbox-unchecked.svg);
+}
+
+@media (min-width: 768px) {
+  .search-form__checkbox {
+    margin: 0 15px 0 0;
+  }
 }
 
 .search-form__checkbox_checked {
@@ -70,6 +135,13 @@ line-height: 1.42;
   font-size: 11px;
   font-weight: 400;
   line-height: 1.63
+}
+
+@media (min-width: 768px) {
+  .search-form__checkbox-label {
+    font-size: 13px;
+    line-height: 1.38
+  }
 }
 
 
