--- a/src/components/NavPopup/NavPopup.css
+++ b/src/components/NavPopup/NavPopup.css
@@ -1,8 +1,24 @@
+@keyframes nav-popup-animation {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
 .nav-popup {
   position: fixed;
   inset: 0;
-  max-width: 320px;
+  max-width: 768px;
 
+}
+
+@media (min-width: 768px) {
+  .nav-popup {
+
+  }
 }
 
 .nav-popup__overlay {
@@ -12,11 +28,30 @@
   opacity: .6;
 }
 
+@media (min-width: 768px) {
+  .nav-popup__overlay {
+
+  }
+}
+
 .nav-popup__wrapper {
   background-color: #FAFAFA;
   position: absolute;
   inset: 0;
+  animation: nav-popup-animation .25s ease-in;
+
 }
+
+@media (min-width: 768px) {
+  .nav-popup__wrapper {
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: auto;
+    width: 520px;
+  }
+}
+
 
 .nav-popup__close-button {
   position: absolute;
@@ -29,4 +64,11 @@
   background-color: transparent;
   background-position: center;
   border: none;
+}
+
+@media (min-width: 768px) {
+  .nav-popup__close-button {
+    top: 27px;
+    right: 27px;
+  }
 }
