--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -8,20 +8,39 @@
 
 }
 
+@media (min-width: 768px) {
+  .navigation {
+    padding: 159px 90px 90px;
+  }
+}
+
+
 .navigation__link {
   display: block;
-  padding-bottom: 7px;
-  margin-bottom: 15px;
+  padding: 0 0 7px 0;
+  margin: 0 0 15px 0;
   color: #000;
   font-size: 18px;
   font-weight: 500;
   text-decoration: none;
 }
 
+@media (min-width: 768px) {
+  .navigation__link {
+    margin: 0 0 22px 0;
+  }
+}
+
 .navigation__link:last-child {
   position: absolute;
   bottom: 46px;
   margin-bottom: 0;
+}
+
+@media (min-width: 768px) {
+  .navigation__link:last-child {
+    bottom: 90px;
+  }
 }
 
 .navigation__link_active {
