--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,21 @@
 .page {
-  position: relative;
+  background-color: #FAFAFA;
   font-family: Inter, Arial, sans-serif;
+  min-height: 100vh;
+}
+
+
+.page__wrapper {
+  width: 100%;
+  position: relative;
+  /* width: 1280px; */
   /* width: 768px; */
   /* width: 320px; */
+}
+
+@media (min-width: 1280px) {
+  .page__wrapper {
+    max-width: 1280px;
+    /* margin: 0 auto; */
+  }
 }
