--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -1,6 +1,5 @@
 .movie-card {
   width: 300px;
-  /* min-height: 235px; */
   filter: drop-shadow(0px 16px 24px rgba(0, 0, 0, 0.05));
   background-color: #fff;
   border-radius: 10px;
@@ -10,6 +9,12 @@
 @media (min-width: 768px) {
   .movie-card {
     width: 339px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .movie-card {
+    width: 270px;
   }
 }
 
@@ -26,6 +31,13 @@
   .movie-card__image {
     width: 339px;
     height: 190px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .movie-card__image {
+    width: 270px;
+    height: 151px;
   }
 }
 
@@ -86,9 +98,11 @@
   background-position: 12px center;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1280px) {
   .movie-card__delete-button {
-
+    box-sizing: content-box;
+    flex-shrink: 0;
+    padding-right: 6px;
   }
 }
 
