--- a/src/components/NavPopup/NavPopup.css
+++ b/src/components/NavPopup/NavPopup.css
@@ -11,13 +11,18 @@
 .nav-popup {
   position: fixed;
   inset: 0;
-  max-width: 768px;
 
 }
 
 @media (min-width: 768px) {
   .nav-popup {
 
+  }
+}
+
+@media (min-width: 1280px) {
+  .nav-popup {
+    display: none;
   }
 }
 
@@ -55,8 +60,8 @@
 
 .nav-popup__close-button {
   position: absolute;
-  top: 14px;
-  right: 14px;
+  top: 19px;
+  right: 18px;
   width: 22px;
   height: 22px;
   padding: 0;
