--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
   position: absolute;
   inset: 0;
   padding: 144px 10px 0;
@@ -10,15 +11,47 @@
 
 @media (min-width: 768px) {
   .navigation {
-    padding: 159px 90px 90px;
+    padding: 159px 90px 0;
   }
 }
+
+@media (min-width: 1280px) {
+  .navigation {
+    flex-direction: row;
+    align-items: center;
+    position: static;
+    padding: 0;
+  }
+}
+
+.navigation__links-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+@media (min-width: 768px) {
+  .navigation__links-wrapper {
+
+  }
+}
+
+@media (min-width: 1280px) {
+  .navigation__links-wrapper {
+    flex-direction: row;
+  }
+}
+
+  .navigation__links-wrapper > .navigation__link:last-child {
+    padding: 0;
+    margin: 0;
+  }
 
 
 .navigation__link {
   display: block;
   padding: 0 0 7px 0;
-  margin: 0 0 15px 0;
+  margin: 0 0 21px 0;
   color: #000;
   font-size: 18px;
   font-weight: 500;
@@ -31,15 +64,45 @@
   }
 }
 
+@media (min-width: 1280px) {
+  .navigation__link {
+    margin: 0 16px 0 0;
+    padding: 0;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 1.38;
+  }
+}
+
 .navigation__link:last-child {
-  position: absolute;
-  bottom: 46px;
-  margin-bottom: 0;
+  margin: 0;
+  padding: 0 0 46px;
 }
 
 @media (min-width: 768px) {
   .navigation__link:last-child {
-    bottom: 90px;
+    padding: 0 0 90px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .navigation__link:last-child {
+    position: static;
+    margin: 0;
+    padding: 0;
+
+  }
+}
+
+@media (min-width: 1280px) {
+  .navigation__link:first-child {
+    display: none;
+  }
+}
+
+@media (min-width: 1280px) {
+  .navigation__link:first-child {
+    margin: 0;
   }
 }
 
@@ -48,8 +111,38 @@
 
 }
 
+@media (min-width: 1280px) {
+  .navigation__link_active {
+    border: none;
+    font-weight: 500;
+
+  }
+}
+
+
 .navigation__profile-icon {
   width: 100px;
   height: 32px;
   background-image: url(../../images/profile-link.svg);
 }
+
+.logo_place_navigation {
+  display: none;
+}
+
+@media (min-width: 1280px) {
+  .logo_place_navigation {
+    display: block;
+    margin: 0 44px 0 0;
+  }
+}
+
+
+@media (min-width: 1280px) {
+  .navigation__link-text {
+    display: none;
+  }
+}
+
+
+
