--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -3,7 +3,6 @@
   flex-direction: column;
   align-items: center;
   border-bottom: 1px solid #E8E8E8;
-  margin: 0 0 10px 0;
 }
 
 @media (min-width: 768px) {
@@ -30,8 +29,9 @@
   }
 }
 
-
 .search-form__input-wrapper {
+  box-sizing: border-box;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -48,6 +48,13 @@
     margin: 0 0 109px 0;
   }
 }
+
+@media (min-width: 1280px) {
+  .search-form__input-wrapper {
+    margin: 0 0 68px 0;
+  }
+}
+
 
 .search-form__input {
   width: 100%;
@@ -97,19 +104,42 @@
   }
 }
 
+/* @media (min-width: 1280px) {
+  .search-form__submit-button {
+    margin: 0 38px 0 0;
+  }
+} */
+
 .search-form__checkbox-wrapper {
-  display: flex;
+  display: none;
   flex-direction: row;
   align-items: center;
   margin: 0 0 45px 0;
 }
 
+.search-form__checkbox-wrapper_mobile {
+  display: flex;
+}
+
 @media (min-width: 768px) {
   .search-form__checkbox-wrapper {
+    display: flex;
     margin: 0;
     padding: 0 0 0 19px;
     border-left: 1px solid #CBCBCB;
     min-height: 40px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .search-form__checkbox-wrapper {
+    padding: 0 11px 0 28px;
+  }
+}
+
+@media (min-width: 768px) {
+  .search-form__checkbox-wrapper_mobile {
+    display: none;
   }
 }
 
