--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -14,10 +14,9 @@
   }
 }
 
-
 .about-me__title {
-  margin: 0 0 64px 0;
-  padding: 0 0 28px 0;
+  margin: 0 0 64px;
+  padding: 0 0 28px;
   border-bottom: 1px solid #000;
   font-size: 18px;
   font-weight: 400;
@@ -25,7 +24,7 @@
 }
 
 @media (min-width: 768px) {
-  .about-me__title{
+  .about-me__title {
     padding: 0 0 25px 0;
     font-size: 22px;
     letter-spacing: -0.88px;
@@ -42,7 +41,7 @@
 }
 
 @media (min-width: 768px) {
-  .about-me__photo{
+  .about-me__photo {
     margin: 0;
     width: 255px;
     height: 307px;
@@ -51,7 +50,7 @@
 }
 
 @media (min-width: 1280px) {
-  .about-me__photo{
+  .about-me__photo {
     margin: 0;
     width: 270px;
     height: 327px;
@@ -59,35 +58,25 @@
   }
 }
 
-
-
 .about-me__info {
   display: flex;
   flex-direction: column;
-
-
-}
-
-@media (min-width: 768px) {
-  .about-me__info{
-  }
 }
 
 .about-me__wrapper {
   display: flex;
   flex-direction: column;
-
 }
 
 @media (min-width: 768px) {
-  .about-me__wrapper{
+  .about-me__wrapper {
     flex-direction: row;
     column-gap: 49px;
   }
 }
 
 @media (min-width: 1280px) {
-  .about-me__wrapper{
+  .about-me__wrapper {
     column-gap: 270px;
   }
 }
@@ -100,7 +89,7 @@
 }
 
 @media (min-width: 768px) {
-  .about-me__name{
+  .about-me__name {
     font-size: 40px;
     letter-spacing: -1.6px;
     line-height: 1;
@@ -109,7 +98,7 @@
 
 @media (min-width: 1280px) {
   .about-me__name {
-    margin: 0 0 22px 0;
+    margin: 0 0 22px;
     font-size: 50px;
     letter-spacing: -2px;
     line-height: 1.16;
@@ -117,7 +106,7 @@
 }
 
 .about-me__job {
-  margin: 0 0 20px 0;
+  margin: 0 0 20px;
   font-size: 11px;
   font-weight: 500;
   line-height: 1.45;
@@ -132,14 +121,14 @@
 
 @media (min-width: 1280px) {
   .about-me__job {
-    margin: 0 0 26px 0;
+    margin: 0 0 26px;
     font-size: 18px;
     line-height: 1.11;
   }
 }
 
 .about-me__text {
-  margin: 0 0 40px 0;
+  margin: 0 0 40px;
   font-size: 11px;
   font-weight: 400;
   line-height: 1.45;
@@ -147,7 +136,7 @@
 
 @media (min-width: 768px) {
   .about-me__text {
-    margin: 0 0 85px 0;
+    margin: 0 0 85px;
     font-size: 12px;
     line-height: 1.5;
   }
@@ -155,7 +144,7 @@
 
 @media (min-width: 1280px) {
   .about-me__text {
-    margin: 0 0 97px 0;
+    margin: 0 0 97px;
     font-size: 14px;
     line-height: 1.57;
   }
@@ -167,11 +156,5 @@
   font-weight: 500;
   line-height: 1.45;
   text-decoration: none;
-
 }
 
-@media (min-width: 768px) {
-  .about-me__link{
-
-  }
-}
