--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -25,16 +25,27 @@
 }
 
 .logo {
+  display: block;
   width: 38px;
   height: 38px;
   background-image: url(../../images/header__logo.svg);
+  transition: all 0.4s;
+}
+
+.logo:hover {
+  transform: scale(1.07);
+}
+
+.logo:active {
+  transition: all .05s;
+  transform: scale(1);
 }
 
 @media (min-width: 1280px) {
   .logo_place_header {
     margin: 0 45px 0 0;
     flex-shrink: 0;
-
+    cursor: pointer;
   }
 }
 
@@ -55,6 +66,16 @@
   color: #000;
   text-decoration: none;
   cursor: pointer;
+  transition: all .3s;
+}
+
+.header__signup-link:hover {
+  transform: scale(1.07);
+}
+
+.header__signup-link:active {
+  transition: all .05s;
+  transform: scale(1);
 }
 
 @media (min-width: 768px) {
@@ -64,18 +85,12 @@
   }
 }
 
-@media (min-width: 1280px) {
-  .header__signup-link {
-
-  }
-}
-
 .header__signin-link {
   box-sizing: border-box;
   display: block;
   width: 54px;
   height: 26px;
-  padding: 5px 12px ;
+  padding: 5px 12px;
   border-radius: 3px;
   font-size: 10px;
   font-weight: 500;
@@ -85,6 +100,16 @@
   background-color: #3456F3;
   text-decoration: none;
   cursor: pointer;
+  transition: all .3s;
+}
+
+.header__signin-link:hover {
+  transform: scale(1.07);
+}
+
+.header__signin-link:active {
+  transition: all .05s;
+  transform: scale(1);
 }
 
 @media (min-width: 768px) {
@@ -92,12 +117,6 @@
     width: 76px;
     height: 32px;
     font-size: 12px;
-  }
-}
-
-@media (min-width: 1280px) {
-  .header__signin-link {
-
   }
 }
 
@@ -122,7 +141,7 @@
 
 @media (min-width: 1280px) {
   .header__nav-button {
-    display: none ;
+    display: none;
   }
 }
 
