--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,17 +1,8 @@
-.login {
-
-
-}
-
 @media (min-width: 768px) {
   .login {
     display: flex;
     justify-content: center;
   }
-}
-
-.login__wrapper {
-
 }
 
 @media (min-width: 768px) {
@@ -21,7 +12,7 @@
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1280px) {
   .login__wrapper {
     padding: 70px 0;
   }
@@ -33,21 +24,20 @@
 
 @media (min-width: 768px) {
   .logo_place_login {
-    margin: 0 0 40px 0;
+    margin: 0 0 40px;
   }
 }
 
 .login__title {
-  margin: 0 0 80px 0;
+  margin: 0 0 80px;
   font-size: 24px;
   font-weight: 500;
   text-align: center;
-
 }
 
 @media (min-width: 768px) {
   .login__title {
-    margin: 0 0 40px 0;
+    margin: 0 0 40px;
     text-align: left;
   }
 }
@@ -59,51 +49,42 @@
 
 @media (min-width: 768px) {
   .user-form {
-    padding: 0 0 0;
+    padding: 0;
   }
 }
 
 .user-form__row {
   display: flex;
   flex-direction: column;
-  margin: 0 0 11px 0;
-
+  margin: 0 0 11px;
 }
 
 @media (min-width: 768px) {
-  .user-form__row  {
-    margin: 0 0 12px 0;
+  .user-form__row {
+    margin: 0 0 12px;
   }
 }
 
 .user-form__row:last-of-type {
-  margin: 0 0 201px 0;
+  margin: 0 0 201px;
 }
 
 @media (min-width: 768px) {
-  .user-form__row:last-of-type  {
-    margin: 0 0 114px 0;
+  .user-form__row:last-of-type {
+    margin: 0 0 114px;
   }
 }
-
-
 
 .user-form__label {
   color: #A0A0A0;
   font-size: 10px;
-  margin: 0 0 5px 0;
-}
-
-@media (min-width: 768px) {
-  .user-form__label {
-
-  }
+  margin: 0 0 5px;
 }
 
 .user-form__input {
   width: 100%;
-  padding: 0 0 11px 0;
-  margin: 0 0 4px 0;
+  padding: 0 0 11px;
+  margin: 0 0 4px;
   color: #000;
   font-size: 14px;
   font-weight: 500;
@@ -111,12 +92,6 @@
   border-bottom: 1px solid #E8E8E8;
   outline: none;
   background-color: inherit;
-}
-
-@media (min-width: 768px) {
-  .user-form__input {
-
-  }
 }
 
 .user-form__input:focus {
@@ -138,32 +113,16 @@
   font-weight: 400;
 }
 
-@media (min-width: 768px) {
-  .user-form__error-message {
-
-  }
-}
-
-.user-form__error-message_place_input {}
-
 .user-form__error-message_place_submit {
-  margin: 0 0 10px 0;
+  margin: 0 0 10px;
   text-align: center;
 }
-
-@media (min-width: 768px) {
-  .user-form__error-message_place_submit {
-
-  }
-}
-
-
 
 .user-form__submit-button {
   width: 100%;
   min-height: 45px;
   padding: 0;
-  margin: 0 0 14px 0;
+  margin: 0 0 14px;
   background-color: #3456F3;
   border: none;
   border-radius: 3px;
@@ -171,13 +130,19 @@
   text-align: center;
   font-size: 12px;
   font-weight: 500;
+  cursor: pointer;
+  transition: all .3s;
+}
 
+.user-form__submit-button:hover {
+  transform: scale(1.03);
 }
 
 @media (min-width: 768px) {
   .user-form__submit-button {
     font-size: 14px;
-    margin: 0 0 18px 0;
+    margin: 0 0 18px;
+    cursor: pointer;
   }
 }
 
@@ -195,7 +160,7 @@
 }
 
 .user-form__button-subtitle-link {
-  display: inline;
+  display: inline-block;
   color: #3456F3;
   text-align: center;
   font-size: 12px;
