--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -3,7 +3,6 @@
   filter: drop-shadow(0px 16px 24px rgba(0, 0, 0, 0.05));
   background-color: #fff;
   border-radius: 10px;
-
 }
 
 @media (min-width: 768px) {
@@ -22,8 +21,8 @@
   display: block;
   width: 300px;
   height: 168px;
-  margin: 0 0 9px 0;
-  border-radius: 10px 10px 0 0;
+  margin: 0 0 9px;
+  border-radius: 10px 10px 0;
   object-fit: cover;
 }
 
@@ -46,7 +45,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  margin: 0 0 4px 0;
+  margin: 0 0 4px;
   padding: 0 12px;
 }
 
@@ -62,12 +61,6 @@
   font-weight: 500;
 }
 
-@media (min-width: 768px) {
-  .movie-card__title {
-
-  }
-}
-
 .movie-card__save-button {
   padding: 0;
   border: none;
@@ -75,11 +68,18 @@
   background-image: url(../../images/save-button-unactive.svg);
   width: 28px;
   height: 28px;
+  background-position: 6px 2px;
+  transition: background-image .6s, transform .1s;
+  cursor: pointer;
+}
+
+.movie-card__save-button:hover {
+  transform: scale(1.1);
 }
 
 @media (min-width: 768px) {
   .movie-card__save-button  {
-
+    background-position: 0;
   }
 }
 
@@ -96,6 +96,7 @@
   height: 28px;
   background-repeat: no-repeat;
   background-position: 12px center;
+  cursor: pointer;
 }
 
 @media (min-width: 1280px) {
@@ -113,10 +114,4 @@
   color: #A0A0A0;
   font-size: 11px;
   font-weight: 400;
-}
-
-@media (min-width: 768px) {
-  .movie-card__duration{
-
-  }
 }
