--- a/src/components/MoviesCardlist/MoviesCardlist.css
+++ b/src/components/MoviesCardlist/MoviesCardlist.css
@@ -1,10 +1,10 @@
 .movies__cardlist {
-  padding: 37px 0 0 0;
+  padding: 48px 0 0;
 }
 
 @media (min-width: 768px) {
   .movies__cardlist {
-    padding: 70px 0 0 0;
+    padding: 80px 0 0;
   }
 }
 
@@ -20,7 +20,7 @@
   justify-items: center;
   justify-content: center;
   gap: 20px;
-  margin: 0 0 80px 0;
+  margin: 0 0 80px;
 }
 
 @media (min-width: 768px) {
@@ -50,6 +50,16 @@
   font-size: 12px;
   font-weight: 500;
   cursor: pointer;
+  transition: all .3s;
+}
+
+.movies__cardlist-button:hover {
+  transform: scale(1.07);
+}
+
+.movies__cardlist-button:active {
+  transition: all .05s;
+  transform: scale(1);
 }
 
 @media (min-width: 768px) {
