--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -1,19 +1,16 @@
 .portfolio {
-  padding: 0 14px 70px;
-
+  padding: 0 14px 49px;
 }
 
 @media (min-width: 768px) {
-  .portfolio{
+  .portfolio {
     padding: 0 50px 90px;
-
   }
 }
 
 @media (min-width: 1280px) {
-  .portfolio{
+  .portfolio {
     padding: 0 70px 104px;
-
   }
 }
 
@@ -26,8 +23,8 @@
 }
 
 @media (min-width: 768px) {
-  .portfolio__title{
-    margin: 0 0 50px 0;
+  .portfolio__title {
+    margin: 0 0 50px;
     font-size: 18px;
     line-height: 1.11;
   }
@@ -37,19 +34,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 0 19px 0;
-  margin: 0 0 20px 0;
-  border-bottom: 1px solid #E6E6E6;;
+  padding: 0 0 19px;
+  margin: 0 0 20px;
+  border-bottom: 1px solid #E6E6E6;
+  ;
 }
 
 .portfolio__item:last-child {
   margin: 0;
-}
-
-@media (min-width: 768px) {
-  .portfolio__item{
-
-  }
 }
 
 .portfolio__link {
@@ -63,7 +55,7 @@
 }
 
 @media (min-width: 768px) {
-  .portfolio__link{
+  .portfolio__link {
     font-size: 28px;
     line-height: 1.78;
     letter-spacing: -1.12px;
@@ -71,7 +63,7 @@
 }
 
 @media (min-width: 1280px) {
-  .portfolio__link{
+  .portfolio__link {
     font-size: 30px;
     line-height: 1.66;
     letter-spacing: -1.2px;
@@ -86,13 +78,13 @@
 }
 
 @media (min-width: 768px) {
-  .portfolio__arrow{
+  .portfolio__arrow {
     font-size: 28px;
   }
 }
 
-@media (min-width: 768px) {
-  .portfolio__arrow{
+@media (min-width: 1280px) {
+  .portfolio__arrow {
     font-size: 30px;
     line-height: 1;
   }
