--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 70px 30px 40px;
+  padding: 72px 30px 40px;
   background-color: #FAFAFA;
 }
 
@@ -14,32 +14,29 @@
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1280px) {
   .profile {
-    width: 410px;
-    margin: 0 auto;
     padding: 74px 0px 70px;
   }
 }
 
 .profile__title {
-  margin: 0 0 80px 0;
+  margin: 0 0 80px;
   font-size: 24px;
   font-weight: 500;
 }
 
 @media (min-width: 768px) {
-  .profile__title{
-    margin: 0 0 98px 0;
+  .profile__title {
+    margin: 0 0 98px;
   }
 }
 
 @media (min-width: 1280px) {
-  .profile__title{
-    margin: 0 0 123px 0;
+  .profile__title {
+    margin: 0 0 123px;
   }
 }
-
 
 .profile-form {
   display: flex;
@@ -49,59 +46,48 @@
   width: 100%;
 }
 
-@media (min-width: 768px) {
-  .profile-form {
-
-  }
-}
-
 .profile-form__row {
   width: 100%;
   display: flex;
   flex-direction: column;
-  margin: 0 0 17px 0;
+  margin: 0 0 17px;
   border-bottom: 1px solid #E8E8E8;
 }
 
-@media (min-width: 768px) {
-  .profile-form__row {
-    margin: 0 0 20px 0;
-  }
-}
-
 .profile-form__row:last-of-type {
-  margin: 0 0 335px 0;
+  margin: 0 0 335px;
   border: none;
 }
 
 @media (min-width: 768px) {
-  .profile-form__row:last-of-type {
-    margin: 0 0 176px 0;
+  .profile-form__row {
+    margin: 0 0 20px;
   }
 }
+
+@media (min-width: 768px) {
+  .profile-form__row:last-of-type {
+    margin: 0 0 163px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .profile-form__row:last-of-type {
+    margin: 0 0 176px;
+  }
+}
+
 
 .profile-form__input-wrapper {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin: 0 0 4px 0;
-}
-
-@media (min-width: 768px) {
-  .profile-form__input-wrapper {
-
-  }
+  margin: 0 0 4px;
 }
 
 .profile-form__label {
   font-size: 11px;
   font-weight: 500;
-}
-
-@media (min-width: 768px) {
-  .profile-form__label {
-
-  }
 }
 
 
@@ -115,12 +101,6 @@
   border: none;
   text-align: right;
   background-color: inherit;
-}
-
-@media (min-width: 768px) {
-  .profile-form__input {
-
-  }
 }
 
 .profile-form__input::placeholder {
@@ -149,23 +129,9 @@
   font-weight: 400;
 }
 
-@media (min-width: 768px) {
-  .profile-form__error-message {
-
-  }
-}
-
-.profile-form__error-message_place_input {}
-
 .profile-form__error-message_place_submit {
-  margin: 0 0 20px ;
+  margin: 0 0 20px;
   text-align: center;
-}
-
-@media (min-width: 768px) {
-  .profile-form__error-message_place_submit {
-
-  }
 }
 
 .profile-form__submit-button {
@@ -179,23 +145,41 @@
   text-align: center;
   font-size: 12px;
   font-weight: 500;
+  cursor: pointer;
+  transition: all .3s;
 }
 
-@media (min-width: 768px) {
-  .profile-form__submit-button {
+.profile-form__submit-button:hover {
+  transform: scale(1.07);
+}
 
-  }
+.profile-form__submit-button:active {
+  transition: all .05s;
+  transform: scale(1);
 }
 
 .profile-form__edit-button {
-  margin: 0 0 16px 0;
+  margin: 0 0 16px;
   text-align: center;
   font-size: 12px;
   font-weight: 400;
   padding: 0;
   border: none;
   background-color: transparent;
+  cursor: pointer;
+  transition: all .3s;
 }
+
+.profile-form__edit-button:hover {
+  transform: scale(1.07);
+}
+
+.profile-form__edit-button:active {
+  transition: all .05s;
+  transform: scale(1);
+}
+
+
 
 @media (min-width: 768px) {
   .profile-form__edit-button {
@@ -210,6 +194,17 @@
   font-weight: 500;
   background-color: transparent;
   border: none;
+  cursor: pointer;
+  transition: all .3s;
+}
+
+.profile-form__logout-button:hover {
+  transform: scale(1.07);
+}
+
+.profile-form__logout-button:active {
+  transition: all .05s;
+  transform: scale(1);
 }
 
 @media (min-width: 768px) {
