--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -20,12 +20,11 @@
     display: block;
     width: 34px;
     height: 34px;
-    margin: 0 10px 0 0;
+    margin: 0 10px 0;
     background-image: url(../../images/search-icon.svg);
     background-position: center;
     background-repeat: no-repeat;
     flex-shrink: 0;
-
   }
 }
 
@@ -37,7 +36,7 @@
   align-items: center;
   min-height: 72px;
   padding: 0 19px;
-  margin: 0 0 46px 0;
+  margin: 0 0 46px;
   border-radius: 9px;
   background: #FFF;
   box-shadow: 0px 3px 14px 0px rgba(0, 0, 0, 0.08);
@@ -45,16 +44,15 @@
 
 @media (min-width: 768px) {
   .search-form__input-wrapper {
-    margin: 0 0 109px 0;
+    margin: 0 0 109px;
   }
 }
 
 @media (min-width: 1280px) {
   .search-form__input-wrapper {
-    margin: 0 0 68px 0;
+    margin: 0 0 68px;
   }
 }
-
 
 .search-form__input {
   width: 100%;
@@ -74,13 +72,6 @@
 
 .search-form__input::placeholder {
   color: #A0A0A0;
-
-}
-
-@media (min-width: 768px) {
-  .search-form__input::placeholder {
-
-  }
 }
 
 .search-form__input:focus {
@@ -96,6 +87,7 @@
   background-color: transparent;
   background-image: url(../../images/search-button.svg);
   border: none;
+  cursor: pointer;
 }
 
 @media (min-width: 768px) {
@@ -104,17 +96,11 @@
   }
 }
 
-/* @media (min-width: 1280px) {
-  .search-form__submit-button {
-    margin: 0 38px 0 0;
-  }
-} */
-
 .search-form__checkbox-wrapper {
   display: none;
   flex-direction: row;
   align-items: center;
-  margin: 0 0 45px 0;
+  margin: 0 0 45px;
 }
 
 .search-form__checkbox-wrapper_mobile {
@@ -149,6 +135,7 @@
   margin: 0 13px 0 0;
   flex-shrink: 0;
   background-image: url(../../images/checkbox-unchecked.svg);
+  cursor: pointer;
 }
 
 @media (min-width: 768px) {
@@ -173,5 +160,3 @@
     line-height: 1.38
   }
 }
-
-
