--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -15,11 +15,9 @@
   }
 }
 
-
-
 .techs__title {
-  margin: 0 0 60px 0;
-  padding: 0 0 28px 0;
+  margin: 0 0 60px;
+  padding: 0 0 28px;
   border-bottom: 1px solid #000;
   font-size: 18px;
   font-weight: 400;
@@ -28,8 +26,8 @@
 
 @media (min-width: 768px) {
   .techs__title {
-    margin: 0 0 80px 0;
-    padding: 0 0 23px 0;
+    margin: 0 0 80px;
+    padding: 0 0 23px;
     font-size: 22px;
     letter-spacing: -0.88px;
   }
@@ -37,7 +35,7 @@
 
 @media (min-width: 1280px) {
   .techs__title {
-    margin: 0 0 90px 0;
+    margin: 0 0 90px;
   }
 }
 
@@ -102,11 +100,17 @@
 
 @media (min-width: 768px) {
   .techs__grid {
-    grid-template-columns: repeat(7, 90px);
+    box-sizing: border-box;
+    padding: 0 10px;
+    grid-template-columns: repeat(7, 84px);
   }
 }
 
-
+@media (min-width: 1280px) {
+  .techs__grid {
+    grid-template-columns: repeat(7, 90px);
+  }
+}
 
 .techs__grid-item {
   box-sizing: border-box;
