fix css file path

--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@
 @import url(./components/NavPopup/NavPopup.css);
 @import url(./components/Navigation/Navigation.css);
 @import url(./components/Login/Login.css);
-@import url(./components/Register/\ Register.css);
+@import url(./components/Register/Register.css);
 @import url(./components/Profile/Profile.css);
 @import url(./components/Movies/Movies.css);
 @import url(./components/SearchForm/SearchForm.css);
