--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -5,8 +5,16 @@
   }
 }
 
+.login__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
 @media (min-width: 768px) {
   .login__wrapper {
+    display: block;
     width: 396px;
     padding: 232px 0;
   }
@@ -19,7 +27,7 @@
 }
 
 .logo_place_login {
-  margin: 56px auto 50px;
+  margin: 56px 0 50px;
 }
 
 @media (min-width: 768px) {
@@ -45,6 +53,7 @@
 .user-form {
   box-sizing: border-box;
   padding: 0 30px 30px;
+  min-width: 100%;
 }
 
 @media (min-width: 768px) {
@@ -135,7 +144,7 @@
 }
 
 .user-form__submit-button:hover {
-  transform: scale(1.03);
+  opacity: .8;
 }
 
 @media (min-width: 768px) {
@@ -165,6 +174,11 @@
   text-align: center;
   font-size: 12px;
   text-decoration: none;
+  transition: all .3s;
+}
+
+.user-form__button-subtitle-link:hover {
+  opacity: .7;
 }
 
 @media (min-width: 768px) {
