--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -30,21 +30,27 @@
   }
 }
 
-.portfolio__item {
+.portfolio__link {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 0 19px;
   margin: 0 0 20px;
   border-bottom: 1px solid #E6E6E6;
-  ;
+  text-decoration: none;
+  transition: all .3s;
 }
 
-.portfolio__item:last-child {
+.portfolio__link:last-child {
   margin: 0;
 }
 
-.portfolio__link {
+.portfolio__link:hover {
+  opacity: .7;
+  }
+
+.portfolio__item {
+  margin: 0;
   display: block;
   color: #000;
   font-size: 18px;
@@ -55,7 +61,7 @@
 }
 
 @media (min-width: 768px) {
-  .portfolio__link {
+  .portfolio__item {
     font-size: 28px;
     line-height: 1.78;
     letter-spacing: -1.12px;
@@ -63,7 +69,7 @@
 }
 
 @media (min-width: 1280px) {
-  .portfolio__link {
+  .portfolio__item {
     font-size: 30px;
     line-height: 1.66;
     letter-spacing: -1.2px;
