--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -57,11 +57,18 @@
 .search-form__input {
   width: 100%;
   padding: 0;
+  margin: 0 15px 0 0;
   font-size: 14px;
   line-height: 1.42;
   border: none;
   outline: none;
 }
+
+.search-form__input:focus {
+  border-bottom: 1px solid #3456F3;
+
+}
+
 
 @media (min-width: 768px) {
   .search-form__input {
@@ -88,7 +95,13 @@
   background-image: url(../../images/search-button.svg);
   border: none;
   cursor: pointer;
+  transition: all .3s;
 }
+
+.search-form__submit-button:hover {
+  opacity: .8;
+}
+
 
 @media (min-width: 768px) {
   .search-form__submit-button {
