--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -24,6 +24,7 @@
   margin: 0 0 9px;
   border-radius: 10px 10px 0;
   object-fit: cover;
+  cursor: pointer;
 }
 
 @media (min-width: 768px) {
@@ -71,6 +72,7 @@
   background-position: 6px 2px;
   transition: background-image .6s, transform .1s;
   cursor: pointer;
+  flex-shrink: 0;
 }
 
 .movie-card__save-button:hover {
