--- a/src/components/MoviesCardlist/MoviesCardlist.css
+++ b/src/components/MoviesCardlist/MoviesCardlist.css
@@ -62,3 +62,18 @@
     width: 320px;
   }
 }
+
+.movies__cardlist-result-message {
+  margin: 0 auto;
+  text-align: center;
+  width: 80%;
+  font-size: 16px;
+  color: #9b9b9b;
+}
+
+@media (min-width: 768px) {
+  .movies__cardlist-result-message {
+    width: 60%;
+    font-size: 20px;
+  }
+}
