--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -92,8 +92,8 @@
 
 
 .profile-form__input {
-  width: 70%;
   padding: 0;
+  width: 70%;
   color: #000;
   font-size: 11px;
   font-weight: 400;
@@ -110,19 +110,29 @@
   text-align: right;
 }
 
+.profile-form__input:focus {
+  border: none;
+  outline: none;
+}
+
 .profile-form__input:read-only:focus {
   border: none;
   outline: none;
 }
 
-.profile-form__input:invalid {
-  border: none;
+.profile-form__input_invalid:focus {
+  padding: 0 3px 0 0;
+  border-right: 3px solid #EE3465;
   outline: none;
-  border-bottom: 1px solid #EE3465;
+}
+
+.profile-form__input_invalid {
+  padding: 0 3px 0 0;
+  border-right: 3px solid #EE3465;
+  outline: none;
 }
 
 .profile-form__error-message {
-  opacity: 0;
   margin: 0;
   color: #EE3465;
   font-size: 10px;
@@ -132,6 +142,23 @@
 .profile-form__error-message_place_submit {
   margin: 0 0 20px;
   text-align: center;
+}
+
+.profile-form__success-message {
+  opacity: 0;
+  margin: 0 0 10px;
+  text-align: center;
+  opacity: 0;
+  color: #53cc2f;
+  font-size: 14px;
+  letter-spacing: 0.3px;
+  transition: all 1s;
+
+}
+
+.profile-form__success-message_visible {
+  opacity: 1;
+
 }
 
 .profile-form__submit-button {
@@ -147,6 +174,11 @@
   font-weight: 500;
   cursor: pointer;
   transition: all .3s;
+}
+
+.profile-form__submit-button:disabled {
+  background-color: #F8F8F8;
+  color: #C2C2C2;
 }
 
 .profile-form__submit-button:hover {
